--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ function checkTime(i) {
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td>look</td>
+        <td>Look</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -473,7 +473,7 @@ function checkTime(i) {
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td>maximalot</td>
+        <td>Maximalot</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -485,25 +485,25 @@ function checkTime(i) {
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td></td>
+        <td>A</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td></td>
+        <td>arkan</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td></td>
+        <td>ras</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td></td>
+        <td>Maverick</td>
         <td>uninitialised</td>
 
    
