--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>19:00</td>
+        <td>05:00</td>
         <td>[RVL]</td>
-        <td>Sysners</td>
+        <td>Bill</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
