--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>17:00</td>
+        <td>unknown</td>
         <td>[RVL]</td>
-        <td>TimE</td>
+        <td></td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -477,9 +477,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>23:00</td>
         <td>[RVL]</td>
-        <td>miracle</td>
+        <td>TryNity</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
