--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ function checkTime(i) {
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td></td>
+        <td>Bacon</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
