--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>12:00</td>
+        <td>unknown</td>
         <td>[RVL]</td>
-        <td>8 8</td>
+        <td>REDNEX</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -369,9 +369,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>18:00</td>
+        <td>unknown</td>
         <td>[RVL]</td>
-        <td>pckod</td>
+        <td>VeG</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -401,7 +401,7 @@ function checkTime(i) {
 	<tr>
         <td>20:00</td>
         <td>[RVL]</td>
-        <td>Jayze</td>
+        <td>Soren</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
