--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ function checkTime(i) {
 	<tr>
         <td>13:00</td>
         <td>[RVL]</td>
-        <td>iori</td>
+        <td>Cashz</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -401,13 +401,13 @@ function checkTime(i) {
 	<tr>
         <td>20:00</td>
         <td>[RVL]</td>
-        <td>Soren</td>
+        <td>Cashz Jr.</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>19:00</td>
+        <td>12:00</td>
         <td>[RVL]</td>
-        <td>Vuur</td>
+        <td>TorQuest</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
