--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@ function checkTime(i) {
 <table id="myTable">
 
 	<tr>
-        <td>4:00</td>
+        <td>19:00</td>
         <td>[RVL]</td>
-        <td>Dück</td>
+        <td>Plomi</td>
         <td>uninitialised</td>
     </tr>
     <tr>
@@ -225,37 +225,37 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>1:00</td>
+        <td>17:00</td>
         <td>[RVL]</td>
         <td>Caesar</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>1:00</td>
+        <td>13:00</td>
         <td>[RVL]</td>
-        <td>Kozmo</td>
+        <td>Aester</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>1:00</td>
+        <td>17:00</td>
         <td>[RVL]</td>
         <td>Bunny</td>
         <td>uninitialised</td>
     </tr>
     <tr>
-        <td>0:00</td>
+        <td>23:00</td>
         <td>[RVL]</td>
         <td>Galactus</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>0:00</td>
+        <td>23:00</td>
         <td>[RVL]</td>
         <td>-GUTA</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>14:00</td>
+        <td>16:00</td>
         <td>[RVL]</td>
         <td>Shmu</td>
         <td>uninitialised</td>
@@ -273,13 +273,13 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>20:00</td>
+        <td>14:00</td>
         <td>[RVL]</td>
-        <td>Kijima</td>
+        <td>INA</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>20:00</td>
+        <td>22:00</td>
         <td>[RVL]</td>
         <td>Reeta</td>
         <td>uninitialised</td>
@@ -303,7 +303,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>1:00</td>
         <td>[RVL]</td>
         <td>REDNEX</td>
         <td>uninitialised</td>
@@ -317,7 +317,7 @@ function checkTime(i) {
 	<tr>
         <td>13:00</td>
         <td>[RVL]</td>
-        <td>Cashz</td>
+        <td>iori</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -327,9 +327,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>13:00</td>
+        <td>14:00</td>
         <td>[RVL]</td>
-        <td>Edwin</td>
+        <td>Chosenon</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -357,7 +357,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>13:00</td>
         <td>[RVL]</td>
         <td>Bacon</td>
         <td>uninitialised</td>
@@ -369,7 +369,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>20:00</td>
         <td>[RVL]</td>
         <td>VeG</td>
         <td>uninitialised</td>
@@ -381,9 +381,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>18:00</td>
+        <td>unknown</td>
         <td>[RVL]</td>
-        <td>Def</td>
+        <td>LUSIANA</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -441,21 +441,21 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>4:00</td>
+        <td>unknown</td>
         <td>[RVL]</td>
-        <td>Kush</td>
+        <td></td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>8:00</td>
+        <td>18:00</td>
         <td>[RVL]</td>
         <td>Shayley</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>19:00</td>
+        <td>08:00</td>
         <td>[RVL]</td>
-        <td>Vi</td>
+        <td>Azor[RVL]Ahai</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -465,9 +465,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>16:00</td>
+        <td>14:00</td>
         <td>[RVL]</td>
-        <td>inh</td>
+        <td>n00iax</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -485,7 +485,7 @@ function checkTime(i) {
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td>A</td>
+        <td></td>
         <td>uninitialised</td>
     </tr>
 	<tr>
