--- a/index.html
+++ b/index.html
@@ -483,9 +483,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>17:00</td>
         <td>[RVL]</td>
-        <td></td>
+        <td>TICKLE</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -497,7 +497,7 @@ function checkTime(i) {
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td></td>
+        <td>Riddick</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
