--- a/index.html
+++ b/index.html
@@ -441,9 +441,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>13:00</td>
         <td>[RVL]</td>
-        <td></td>
+        <td>Serigala</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
