--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>23:00</td>
+        <td>3:00</td>
         <td>[RVL]</td>
-        <td>-GUTA</td>
+        <td>Immrtl1</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -401,7 +401,7 @@ function checkTime(i) {
 	<tr>
         <td>20:00</td>
         <td>[RVL]</td>
-        <td>Cashz Jr.</td>
+        <td>Søren</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
