--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>13:00</td>
+        <td>15:00</td>
         <td>[RVL]</td>
-        <td>Aester</td>
+        <td>GenGar</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
