--- a/index.html
+++ b/index.html
@@ -207,111 +207,15 @@ function checkTime(i) {
 <table id="myTable">
 
 	<tr>
-        <td>19:00</td>
-        <td>[RVL]</td>
-        <td>Plomi</td>
-        <td>uninitialised</td>
-    </tr>
-    <tr>
-        <td>2:00</td>
-        <td>[RVL]</td>
-        <td>Ayax</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>2:00</td>
-        <td>[RVL]</td>
-        <td>DARK</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>17:00</td>
-        <td>[RVL]</td>
-        <td>Caesar</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>15:00</td>
-        <td>[RVL]</td>
-        <td>GenGar</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>17:00</td>
-        <td>[RVL]</td>
-        <td>Bunny</td>
-        <td>uninitialised</td>
-    </tr>
-    <tr>
-        <td>23:00</td>
-        <td>[RVL]</td>
-        <td>Galactus</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>3:00</td>
-        <td>[RVL]</td>
-        <td>Immrtl1</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>16:00</td>
-        <td>[RVL]</td>
-        <td>Shmu</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>21:00</td>
-        <td>[RVL]</td>
-        <td>aer</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>20:00</td>
-        <td>[RVL]</td>
-        <td>Irby</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>14:00</td>
-        <td>[RVL]</td>
-        <td>INA</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>22:00</td>
-        <td>[RVL]</td>
-        <td>Reeta</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>19:00</td>
-        <td>[RVL]</td>
-        <td>BLuudi !</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>20:00</td>
-        <td>[RVL]</td>
-        <td>Lulu</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>11:00</td>
+        <td>10:00</td>
         <td>[RVL]</td>
         <td>ValthoR</td>
         <td>uninitialised</td>
     </tr>
-	<tr>
-        <td>1:00</td>
+    <tr>
+        <td>13:00</td>
         <td>[RVL]</td>
-        <td>REDNEX</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>12:00</td>
-        <td>[RVL]</td>
-        <td>ROMY</td>
+        <td>Mojo</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -323,25 +227,25 @@ function checkTime(i) {
 	<tr>
         <td>13:00</td>
         <td>[RVL]</td>
-        <td>0kawari</td>
+        <td>cptFrOsT</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>13:00</td>
+        <td>[RVL]</td>
+        <td>Pirate</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
         <td>14:00</td>
         <td>[RVL]</td>
-        <td>Chosenon</td>
+        <td>n001ax</td>
         <td>uninitialised</td>
     </tr>
-	<tr>
-        <td>14:00</td>
+    <tr>
+        <td>14:30</td>
         <td>[RVL]</td>
-        <td>Lucas</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>16:00</td>
-        <td>[RVL]</td>
-        <td>KoRn</td>
+        <td>Marccoxx</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -351,39 +255,21 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
+        <td>15:00</td>
+        <td>[RVL]</td>
+        <td>_GenGar_</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
         <td>16:00</td>
         <td>[RVL]</td>
-        <td>EV!LF3@R</td>
+        <td>Shmu</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>13:00</td>
+        <td>17:00</td>
         <td>[RVL]</td>
-        <td>Bacon</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>20:00</td>
-        <td>[RVL]</td>
-        <td>V</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>20:00</td>
-        <td>[RVL]</td>
-        <td>VeG</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>18:00</td>
-        <td>[RVL]</td>
-        <td>GuNnErS</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>unknown</td>
-        <td>[RVL]</td>
-        <td>LUSIANA</td>
+        <td>riddick</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -393,33 +279,15 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>19:00</td>
+        <td>18:00</td>
         <td>[RVL]</td>
-        <td>David[RVL]</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>20:00</td>
-        <td>[RVL]</td>
-        <td>Søren</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>12:00</td>
-        <td>[RVL]</td>
-        <td>TorQuest</td>
+        <td>GuNnErS</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
         <td>19:00</td>
         <td>[RVL]</td>
-        <td>qwer</td>
-        <td>uninitialised</td>
-    </tr>
-	<tr>
-        <td>5:00</td>
-        <td>[RVL]</td>
-        <td>Bill</td>
+        <td>Juggs</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -431,79 +299,211 @@ function checkTime(i) {
 	<tr>
         <td>19:00</td>
         <td>[RVL]</td>
+        <td>qwer</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>20:00</td>
+        <td>[RVL]</td>
+        <td>Irby</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>20:00</td>
+        <td>[RVL]</td>
+        <td>David</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>20:00</td>
+        <td>[RVL]</td>
+        <td>Degatron</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>20:00</td>
+        <td>[RVL]</td>
         <td>Tanneh</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>19:00</td>
+        <td>20:00</td>
         <td>[RVL]</td>
-        <td>Juggs</td>
+        <td>Vi</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>13:00</td>
+        <td>20:00</td>
         <td>[RVL]</td>
-        <td>Serigala</td>
+        <td>VeG</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>18:00</td>
+        <td>20:00</td>
         <td>[RVL]</td>
-        <td>Shayley</td>
+        <td>bromeo</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>8:00</td>
+        <td>20:00</td>
         <td>[RVL]</td>
-        <td>Azor[RVL]Ahai</td>
+        <td>Wookie</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>12:00</td>
+        <td>21:00</td>
         <td>[RVL]</td>
-        <td>Look</td>
+        <td>LuLu</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>14:00</td>
+        <td>21:00</td>
         <td>[RVL]</td>
-        <td>n00iax</td>
+        <td>SantaClaus</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>22:00</td>
         <td>[RVL]</td>
-        <td>Maximalot</td>
+        <td>aergia</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>23:00</td>
+        <td>00:00</td>
         <td>[RVL]</td>
         <td>TryNity</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>17:00</td>
+        <td>00:00</td>
         <td>[RVL]</td>
-        <td>TICKLE</td>
+        <td>FELIPE</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>18:00</td>
+        <td>00:00</td>
         <td>[RVL]</td>
-        <td>arkan</td>
+        <td>G</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>00:00</td>
+        <td>[RVL]</td>
+        <td>Maverick</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>00:30</td>
+        <td>[RVL]</td>
+        <td>Bunny</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>2:00</td>
+        <td>[RVL]</td>
+        <td>Mavaho-5</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>2:00</td>
+        <td>[RVL]</td>
+        <td>REDNEX</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>2:00</td>
+        <td>[RVL]</td>
+        <td>~Cobra~</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>2:00</td>
+        <td>[RVL]</td>
+        <td>Caesar</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>2:00</td>
+        <td>[RVL]</td>
+        <td>Torak-5</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>2:00</td>
+        <td>[RVL]</td>
+        <td>THAT GUY</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>3:00</td>
+        <td>[RVL]</td>
+        <td>immrtl1</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>3:00</td>
+        <td>[RVL]</td>
+        <td>?XIL?</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>3:00</td>
+        <td>[RVL]</td>
+        <td>Ajax</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>3:00</td>
+        <td>[RVL]</td>
+        <td>Rylee</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>3:00</td>
+        <td>[RVL]</td>
+        <td>DARK</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>4:00</td>
+        <td>[RVL]</td>
+        <td>?u?us</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
         <td>unknown</td>
         <td>[RVL]</td>
-        <td>Riddick</td>
+        <td>unknown</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>23:00</td>
+        <td>unknown</td>
         <td>[RVL]</td>
-        <td>Maverick</td>
+        <td>unknown</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>unknown</td>
+        <td>[RVL]</td>
+        <td>unknown</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>unknown</td>
+        <td>[RVL]</td>
+        <td>unknown</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>unknown</td>
+        <td>[RVL]</td>
+        <td>unknown</td>
+        <td>uninitialised</td>
+    </tr>
+	<tr>
+        <td>unknown</td>
+        <td>[RVL]</td>
+        <td>unknown</td>
         <td>uninitialised</td>
 
    
