--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ function checkTime(i) {
 <table id="myTable">
 
 	<tr>
-        <td>10:00</td>
+        <td>11:00</td>
         <td>[RVL]</td>
         <td>ValthoR</td>
         <td>uninitialised</td>
@@ -369,7 +369,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>00:00</td>
+        <td>23:00</td>
         <td>[RVL]</td>
         <td>TryNity</td>
         <td>uninitialised</td>
@@ -399,7 +399,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>2:00</td>
+        <td>1:00</td>
         <td>[RVL]</td>
         <td>Mavaho-5</td>
         <td>uninitialised</td>
@@ -417,7 +417,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>2:00</td>
+        <td>1:00</td>
         <td>[RVL]</td>
         <td>Caesar</td>
         <td>uninitialised</td>
@@ -471,33 +471,33 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>14:00</td>
         <td>[RVL]</td>
-        <td>unknown</td>
+        <td>Maxi</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>16:30</td>
         <td>[RVL]</td>
-        <td>unknown</td>
+        <td>EV!lLF3@R</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>16:00</td>
         <td>[RVL]</td>
-        <td>unknown</td>
+        <td>Claw</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>12:00</td>
         <td>[RVL]</td>
-        <td>unknown</td>
+        <td>BosnaBeast</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>unknown</td>
+        <td>20:00</td>
         <td>[RVL]</td>
-        <td>unknown</td>
+        <td>Lucif</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
