--- a/index.html
+++ b/index.html
@@ -315,19 +315,19 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>20:00</td>
+        <td>19:00</td>
         <td>[RVL]</td>
         <td>Degatron</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>20:00</td>
+        <td>19:00</td>
         <td>[RVL]</td>
         <td>Tanneh</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>20:00</td>
+        <td>19:00</td>
         <td>[RVL]</td>
         <td>Vi</td>
         <td>uninitialised</td>
@@ -351,13 +351,13 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>21:00</td>
+        <td>20:00</td>
         <td>[RVL]</td>
         <td>LuLu</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>21:00</td>
+        <td>20:00</td>
         <td>[RVL]</td>
         <td>SantaClaus</td>
         <td>uninitialised</td>
@@ -393,7 +393,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>00:30</td>
+        <td>23:30</td>
         <td>[RVL]</td>
         <td>Bunny</td>
         <td>uninitialised</td>
@@ -435,7 +435,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>3:00</td>
+        <td>2:00</td>
         <td>[RVL]</td>
         <td>immrtl1</td>
         <td>uninitialised</td>
@@ -459,7 +459,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>3:00</td>
+        <td>2:00</td>
         <td>[RVL]</td>
         <td>DARK</td>
         <td>uninitialised</td>
@@ -477,9 +477,9 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>16:30</td>
+        <td>19:00</td>
         <td>[RVL]</td>
-        <td>EV!lLF3@R</td>
+        <td>Surgeon</td>
         <td>uninitialised</td>
     </tr>
 	<tr>
@@ -495,7 +495,7 @@ function checkTime(i) {
         <td>uninitialised</td>
     </tr>
 	<tr>
-        <td>20:00</td>
+        <td>19:00</td>
         <td>[RVL]</td>
         <td>Lucif</td>
         <td>uninitialised</td>
